# pac-learned-index

./: .env.example  .gitignore  README.md  demo.py  pyproject.toml  requirements.txt  run_experiment.py  run_system.py
configs/: debug.yaml  default.yaml
configs/datasets/: amzn.yaml  face.yaml  osm.yaml  wiki.yaml
configs/experiment/: ablation.yaml  main_comparison.yaml  microbenchmark.yaml  scalability.yaml
configs/workloads/: mixed.yaml  olap.yaml  oltp.yaml
src/: __init__.py
src/evaluation/: __init__.py  statistics.py
src/pac_index/: __version__.py
src/pac_index/core/: __init__.py  config.py  engine.py  pipeline.py
src/pac_index/evaluation/: metrics.py
src/pac_index/query/: __init__.py  executor.py  optimizer.py  parser.py
src/pac_index/storage/: manager.py  structures.py
src/pac_index/utils/: __init__.py  system_info.py
src/pac_index/workload/: generator.py  loader.py
src/storage/: __init__.py
src/utils/: io.py  logging.py
src/workload/: __init__.py  driver.py
tests/: conftest.py  test_core.py  test_metrics.py  test_statistics.py  test_storage.py  test_workload.py
tests/fixtures/: sample_config.yaml
